# mmheroes

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
mmheroes-core-rs/: Cargo.toml  README.md  build.rs  cbindgen.toml  mmheroes.h  rustfmt.toml
mmheroes-core-rs/fuzz/: Cargo.toml
mmheroes-core-rs/fuzz/fuzz_targets/: fuzz_target_1.rs
mmheroes-core-rs/iOS/: Cargo.toml
mmheroes-core-rs/src/: async_support.rs  ffi.rs  lib.rs  logic.rs  random.rs  ui.rs  util.rs
mmheroes-core-rs/src/logic/: actions.rs  cause_of_death.rs  characteristics.rs  entry_point.rs  game_screen.rs  game_state.rs  legacy.rs  misc.rs  mod.rs  npc.rs  player.rs  sleep.rs  subject_status.rs  subjects.rs  timetable.rs
mmheroes-core-rs/src/logic/interactions/: grisha.rs  kolya.rs  kuzmenko.rs  mod.rs  pasha.rs  sasha.rs
mmheroes-core-rs/src/logic/npc/: andrew.rs  diamond.rs  djug.rs  grisha.rs  kolya.rs  kuzmenko.rs  misha.rs  mod.rs  nil.rs  pasha.rs  rai.rs  sasha.rs  serj.rs
mmheroes-core-rs/src/logic/scene_router/: cafe.rs  dorm.rs  mod.rs  (+7 more)
mmheroes-core-rs/src/ui/: cp866_encoding.rs  dialog.rs  high_scores.rs  mod.rs  recorded_input.rs  recording.rs  renderer.rs
mmheroes-core-rs/src/util/: async_support.rs  bitset.rs  mod.rs  tiny_string.rs  tiny_vec.rs
mmheroes-core-rs/tests/: cafe.rs  classmates.rs  common.rs  computer_class.rs  corner_cases.rs  dorm.rs  exams.rs  grisha.rs  kolya.rs  kuzmenko.rs  mausoleum.rs  nil.rs  pasha.rs  punk.rs  sasha.rs  sleeping.rs  studying.rs  terkom.rs  traveling.rs
mmheroes-rs/: Cargo.toml  README.md
mmheroes-rs/src/: main.rs
(+49 files in other folders)
