[package]
name = "mmheroes-core"
version = "0.1.0"
authors = ["Sergej Jaskiewicz <jaskiewiczs@icloud.com>"]
edition = "2021"

[dependencies]
unicode-segmentation = "1.12.0"
assert_matches = "1.5.0"
bitflags = "2.6.0"
bitfield-struct = "0.9.1"
strum = { version = "0.26", features = ["derive"] }

[features]
default = ["std"]
std = []
