[package]
name = "mmheroes"
version = "0.1.0"
authors = ["Sergej Jaskiewicz <jaskiewiczs@icloud.com>"]
edition = "2018"

[dependencies]
mmheroes-core = { path = "../mmheroes-core-rs" }

[dependencies.pancurses]
version = "0.16.1"
features = ["win32"]

[profile.release]
opt-level = "s"  # Optimize for size.
lto = true
